maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: not enough arguments for constructor Tuple2: (_1: T1, _2: T2)(T1, T2).
Unspecified value parameters _1, _2.
  var sortie = new Tuple2 trouveSortie()
               ^JediEscaper:6: error: class Tuple2 takes type parameters
def trouveSortie() : Tuple2 = {
                     ^JediEscaper:6: error: class Tuple2 takes type parameters
def trouveSortie() : Tuple2 = {
                     ^