maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var sortie = new Tuple2 trouveSortie()
}

def trouveSortie() : Tuple2 = {
  for (x <- 0 to getMondeLargeur()){
  	for (y <- 0 to getMondeHauteur()){
      if (aBiscuit(x,y)) {(x,y)}
    }
  }
}